# event-loop

./: .clang-format  CMakeLists.txt  README.md
include/: EventLoop.hpp  EventSource.hpp  PeriodicEvent.hpp  PeriodicTimeoutEvent.hpp  TimeoutEvent.hpp
src/: EventLoop.cpp  EventSource.cpp  PeriodicEvent.cpp  PeriodicTimeoutEvent.cpp  TimeoutEvent.cpp
tests/: CMakeLists.txt  test_EventLoop.cpp
